2010-02-08  Kenichi Handa  <handa@m17n.org>

	* international/mule-util.el (with-coding-priority): Add autoload
	cookie for putting `lisp-indent-funciton'.

2010-02-07  Glenn Morris  <rgm@gnu.org>

	* progmodes/f90.el (f90-font-lock-keywords-1, f90-font-lock-keywords-2):
	Move F2003 named interfaces from keywords-2 to keywords-1, and
	use function-name-face rather than constant-face.
	Simplify "abstract interface" regexp.

2010-02-07  Chong Yidong  <cyd@stupidchicken.com>

	* eshell/esh-util.el (eshell-file-attributes): New optional arg
	ID-FORMAT.  Pass it to `file-attributes'.

	* eshell/em-ls.el (eshell-do-ls): Use it (Bug#5528).

2010-02-07  sj  <prime.wizard+emacs@gmail.com>  (tiny change)

	* faces.el (set-face-attribute): Allow calling
	internal-set-lisp-face-attribute with 'unspecified family and
	foundry argument (Bug#5536).

2010-02-07  Glenn Morris  <rgm@gnu.org>

	* progmodes/f90.el (f90-font-lock-keywords-2)
	(f90-looking-at-type-like, f90-looking-at-program-block-end):
	Handle F2003 named interfaces.

2010-02-06  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/cc-mode.el (c-common-init): Bind temporary variables
	beg and end before calling c-get-state-before-change-functions.

2010-02-06  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-bzr.el (vc-bzr-dir-extra-headers): Disable the pending merges header.

2010-02-05  Juri Linkov  <juri@jurta.org>

	* doc-view.el (doc-view-mode):
	* image-mode.el (image-mode): Put property mode-class=special.
	(Bug#4896)

2010-02-05  Mark A. Hershberger  <mah@everybody.org>

	* vc-svn.el (vc-svn-revision-table): New function.

2010-02-05  Michael Albinus  <michael.albinus@gmx.de>

	* net/ange-ftp.el (ange-ftp-insert-directory):
	* net/tramp-imap.el (tramp-imap-handle-insert-directory):
	* net/tramp-smb.el (tramp-smb-handle-insert-directory):
	Handle also directories.  (Bug#5478)

2010-02-05  Glenn Morris  <rgm@gnu.org>

	* progmodes/f90.el (f90-font-lock-keywords-2): Fix `enum'.
